--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hk0430.github.io/kenny",
+  "homepage": "http://hk0430.github.io",
   "name": "kenny",
   "version": "0.1.0",
   "private": true,
